avoid warning, ready for albatis 1.4